# rustik

./: Cargo.toml  README.md
.github/workflows/: test.yml
src/: buffer.rs  config.rs  editor.rs  highlighter.rs  logger.rs  main.rs
src/fixtures/: config.toml
src/theme/: mod.rs  vscode.rs
themes/: mocha.json  nightfox.json
