[package]
name = "rustik"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
crossterm = "0.28.1"
once_cell = "1.19.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
toml = "0.8.19"
tree-sitter = "0.20.10"
tree-sitter-rust = "0.20.4"
